Creation Team and Charts Update

--- a/app/src/main/res/layout/fragment_create_team_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_create_team_bottom_sheet.xml
@@ -4,7 +4,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".teams.CreateTeamActivity"
+    tools:context=".teams.CreateTeamBottomSheet"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 <ScrollView
@@ -27,32 +27,38 @@
             android:src="@drawable/baseline_close_24"
             android:scaleType="fitXY"
             android:gravity="top"
-            android:layout_margin="15dp"/>
+            android:layout_marginTop="30dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginBottom="15dp"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_gravity="center"
         android:gravity="center"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp">
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginBottom="20dp">
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/imgTeam"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             android:src="@drawable/default_image"
             tools:src="@drawable/e"
-            android:layout_marginBottom="20dp"
             android:visibility="gone"/>
 
         <com.facebook.shimmer.ShimmerFrameLayout
             android:id="@+id/shimmerImg"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             app:shimmer_auto_start="true"
-            android:visibility="visible"
-            android:layout_marginBottom="20dp">
+            android:visibility="visible">
 
             <View
                 android:layout_width="match_parent"
@@ -62,6 +68,21 @@
                 android:backgroundTint="?attr/shimmerColor"/>
         </com.facebook.shimmer.ShimmerFrameLayout>
 
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Nome da Equipe"
+                android:layout_marginStart="10dp">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/txtTeamName"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:inputType="text"/>
+            </com.google.android.material.textfield.TextInputLayout>
+    </LinearLayout>
+
+
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="60dp"
@@ -70,19 +91,6 @@
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/txtHandle"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:inputType="text"/>
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:hint="Nome da Equipe"
-            android:layout_marginBottom="20dp">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/txtTeamName"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:inputType="text"/>
