--- a/app/src/main/res/layout/activity_teamoverview.xml
+++ b/app/src/main/res/layout/activity_teamoverview.xml
@@ -19,7 +19,7 @@
     android:layout_gravity="top">
 
     <ImageButton
-        android:id="@+id/btnBack"
+        android:id="@+id/btnClose"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:background="@null"
@@ -28,284 +28,27 @@
         app:tint="?android:attr/iconTint"
         android:scaleType="fitXY"
         android:gravity="top"
-        android:layout_margin="15dp"/>
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="5dp"
+        android:layout_marginStart="15dp"/>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:layout_marginBottom="20dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp">
-
-        <LinearLayout
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/tabLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:layout_marginBottom="10dp">
+            android:background="?android:attr/colorBackground"
+            app:tabIndicatorColor="?android:attr/textColorPrimary"
+            app:tabSelectedTextColor="?android:attr/textColorPrimary"
+            app:tabTextColor="?android:attr/textColorPrimary" />
 
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:layout_width="65dp"
-                android:layout_height="65dp"
-                android:src="@drawable/default_image"
-                tools:src="@drawable/e"
-                android:id="@+id/teamPicture"
-                android:visibility="gone"
-                android:layout_marginEnd="10dp"/>
-
-            <com.facebook.shimmer.ShimmerFrameLayout
-                android:id="@+id/shimmerImg"
-                android:layout_width="65dp"
-                android:layout_height="65dp"
-                app:shimmer_auto_start="true"
-                android:visibility="visible"
-                android:layout_marginEnd="10dp">
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:background="@drawable/image_shape"
-                    android:visibility="visible"
-                    android:backgroundTint="?attr/shimmerColor"/>
-            </com.facebook.shimmer.ShimmerFrameLayout>
-
-                <com.google.android.material.textfield.TextInputLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0.7"
-                    android:hint="Nome da Equipe"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginBottom="10dp">
-
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/txtTeamName"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:inputType="text"
-                        tools:text="EcoSynergy"
-                        android:text="carregando..."
-                        android:enabled="false"
-                        android:clickable="true"/>
-                </com.google.android.material.textfield.TextInputLayout>
-
-            <ImageButton
-                android:id="@+id/btnEditTeamName"
-                android:layout_width="0dp"
-                android:layout_height="55dp"
-                android:layout_weight="0.18"
-                android:layout_gravity="center"
-                android:background="@drawable/round_button"
-                android:src="@drawable/baseline_edit_24"
-                app:tint="?android:attr/iconTint"
-                android:layout_marginStart="5dp"
-                android:visibility="gone"/>
-        </LinearLayout>
-
-        <LinearLayout
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/viewPager"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginBottom="15dp"
-            android:layout_gravity="center_vertical">
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:hint="Handle da Equipe"
-                android:layout_marginBottom="4dp">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/txtHandle"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:text="carregando..."
-                    android:inputType="text"
-                    android:enabled="false"
-                    android:clickable="true"/>
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <ImageButton
-                android:id="@+id/btnEditHandle"
-                android:layout_width="0dp"
-                android:layout_height="55dp"
-                android:layout_weight="0.2"
-                android:layout_gravity="center"
-                android:background="@drawable/round_button"
-                android:src="@drawable/baseline_edit_24"
-                app:tint="?android:attr/iconTint"
-                android:layout_marginStart="5dp"
-                android:visibility="gone"/>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginBottom="15dp"
-            android:layout_gravity="center_vertical">
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:hint="Descrição"
-                android:layout_marginBottom="4dp">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/txtDescription"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:text="carregando..."
-                    android:inputType="text"
-                    android:enabled="false"
-                    android:clickable="true"/>
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <ImageButton
-                android:id="@+id/btnEditDescription"
-                android:layout_width="0dp"
-                android:layout_height="55dp"
-                android:layout_weight="0.2"
-                android:layout_gravity="center"
-                android:background="@drawable/round_button"
-                android:src="@drawable/baseline_edit_24"
-                app:tint="?android:attr/iconTint"
-                android:layout_marginStart="5dp"
-                android:visibility="gone"/>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginBottom="15dp"
-            android:layout_gravity="center_vertical">
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:hint="Setor"
-                android:layout_marginBottom="4dp">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/txtSector"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:text="carregando..."
-                    android:inputType="text"
-                    android:enabled="false"
-                    android:clickable="true"/>
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <ImageButton
-                android:id="@+id/btnEditSector"
-                android:layout_width="0dp"
-                android:layout_height="55dp"
-                android:layout_weight="0.2"
-                android:layout_gravity="center"
-                android:background="@drawable/round_button"
-                android:src="@drawable/baseline_edit_24"
-                app:tint="?android:attr/iconTint"
-                android:layout_marginStart="5dp"
-                android:visibility="gone"/>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginBottom="15dp"
-            android:layout_gravity="center_vertical">
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:hint="Plano"
-                android:layout_marginBottom="4dp">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/txtPlan"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:text="carregando..."
-                    android:inputType="text"
-                    android:enabled="false"
-                    android:clickable="true"/>
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <ImageButton
-                android:id="@+id/btnEditPlan"
-                android:layout_width="0dp"
-                android:layout_height="55dp"
-                android:layout_weight="0.2"
-                android:layout_gravity="center"
-                android:background="@drawable/round_button"
-                android:src="@drawable/baseline_edit_24"
-                app:tint="?android:attr/iconTint"
-                android:layout_marginStart="5dp"
-                android:visibility="gone"/>
-        </LinearLayout>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Membros:"
-            android:textSize="15sp"
-            android:textStyle="bold"
-            android:layout_marginBottom="10dp"/>
-
-        <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycleMembers"
-        android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:maxHeight="300dp"
-        android:visibility="gone"/>
-
-        <com.facebook.shimmer.ShimmerFrameLayout
-            android:id="@+id/shimmerMembers"
-            android:layout_width="match_parent"
-            android:layout_height="300dp"
-            app:shimmer_auto_start="true"
-            android:visibility="visible">
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@drawable/rect_shape"
-                android:visibility="visible"
-                android:backgroundTint="?attr/shimmerColor"/>
-        </com.facebook.shimmer.ShimmerFrameLayout>
-
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/btnDelete"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="Excluir..."
-            tools:text="Excluir ecosynergyofc"
-            app:icon="@drawable/baseline_delete_24"
-            app:iconSize="20dp"
-            app:iconTint="@color/red"
-            app:iconPadding="5dp"
-            app:iconGravity="textStart"
-            android:backgroundTint="?android:attr/colorBackground"
-            android:textColor="@color/red"
-            android:textStyle="bold"
-            android:textSize="16sp"/>
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"/>
 
     </LinearLayout>
-
-</LinearLayout>
 </ScrollView>
     <View
         android:id="@+id/overlayView"
