--- a/app/src/main/res/layout/fragment_create_team_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_create_team_bottom_sheet.xml
@@ -16,20 +16,20 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_gravity="start"
-        android:gravity="start">
+        android:gravity="end">
 
         <ImageButton
             android:id="@+id/btnBack"
-            android:layout_width="40dp"
+            android:layout_width="39dp"
             android:layout_height="40dp"
-            android:background="@null"
-            app:tint="?android:attr/iconTint"
-            android:src="@drawable/baseline_close_24"
-            android:scaleType="fitXY"
-            android:gravity="top"
+            android:layout_marginEnd="15dp"
             android:layout_marginTop="30dp"
-            android:layout_marginStart="15dp"
-            android:layout_marginBottom="15dp"/>
+            android:layout_marginBottom="15dp"
+            android:background="@null"
+            android:gravity="top"
+            android:scaleType="fitXY"
+            android:src="@drawable/baseline_close_24"
+            app:tint="?android:attr/iconTint" />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
