--- a/app/src/main/res/layout/fragment_team_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_team_bottom_sheet.xml
@@ -4,9 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".teams.TeamActivity"
+    tools:context=".teams.TeamBottomSheet"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:focusable="false">
+    android:focusable="false"
+    android:fillViewport="true">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -16,51 +17,47 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="70dp"
-            android:layout_gravity="center_horizontal"
-            android:gravity="center_vertical"
+            android:layout_gravity="center"
+            android:gravity="center"
             android:orientation="horizontal"
-            android:background="?android:attr/colorBackground">
+            android:layout_marginBottom="20dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp">
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/imgTeam"
-                android:layout_width="70dp"
-                android:layout_height="70dp"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
                 android:src="@drawable/default_image"
-                android:layout_marginStart="15dp"
-                android:padding="5dp"
-                android:layout_gravity="start"/>
+                tools:src="@drawable/e"/>
 
             <TextView
                 android:id="@+id/lblTeamName"
-                android:textColor="?android:attr/textColorPrimary"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="5dp"
                 android:layout_weight="1"
-                android:text="Nome da Equipe"
-                android:textStyle="bold"
+                android:text="..."
+                tools:text="\@ecosynergyofc"
+                android:textAlignment="center"
+                android:textColor="?android:attr/textColorPrimary"
                 android:textSize="20sp"
-                android:layout_marginStart="10dp"
-                android:layout_marginEnd="10dp"
-                android:gravity="center_vertical"/>
+                android:textStyle="bold" />
 
             <ImageButton
-                android:id="@+id/btnTeamSettings"
+                android:id="@+id/btnClose"
                 android:layout_width="35dp"
                 android:layout_height="35dp"
                 android:scaleType="fitXY"
-                android:src="@drawable/baseline_settings_24"
+                android:src="@drawable/baseline_close_24"
                 android:background="@null"
-                android:layout_marginEnd="20dp"
+                android:layout_marginStart="20dp"
                 android:layout_gravity="end|center"
                 app:tint="?android:attr/iconTint" />
 
         </LinearLayout>
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:background="@drawable/divider"
-            android:backgroundTint="?android:attr/colorForeground"
-            android:layout_marginBottom="20dp"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -74,7 +71,7 @@
             <com.google.android.material.imageview.ShapeableImageView
                 app:shapeAppearanceOverlay="@style/RoundedSquare"
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
+                android:layout_height="300dp"
                 android:background="?attr/fragmentsBackground"
                 android:scaleType="center"
                 android:layout_gravity="center"
@@ -83,7 +80,7 @@
             <com.google.android.material.imageview.ShapeableImageView
                 app:shapeAppearanceOverlay="@style/RoundedSquare"
                 android:layout_width="match_parent"
-                android:layout_height="250dp"
+                android:layout_height="300dp"
                 android:background="?attr/fragmentsBackground"
                 android:scaleType="center"
                 android:layout_gravity="center"
