--- a/app/src/main/res/layout/members_layout.xml
+++ b/app/src/main/res/layout/members_layout.xml
@@ -75,6 +75,7 @@
             android:background="@color/transparent"
             app:tint="@color/red"
             android:scaleType="fitXY"
-            android:layout_marginEnd="10dp"/>
+            android:layout_marginEnd="10dp"
+            android:visibility="gone"/>
     </LinearLayout>
 </LinearLayout>
