--- a/app/src/main/res/layout/activity_confirmation.xml
+++ b/app/src/main/res/layout/activity_confirmation.xml
@@ -9,9 +9,10 @@
 
     <ImageButton
         android:id="@+id/btnBack"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:background="@null"
+        android:contentDescription="backButton"
         android:src="@drawable/baseline_arrow_back_24"
         android:scaleType="fitXY"
         android:layout_margin="15dp"
@@ -20,14 +21,16 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/btnBack">
+        android:fillViewport="true">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:gravity="center"
-            android:padding="16dp">
+            android:layout_gravity="center"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="15dp">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -36,8 +39,7 @@
                 android:textColor="?android:attr/textColorPrimary"
                 android:textSize="30sp"
                 android:textStyle="bold"
-                android:layout_marginBottom="30dp"
-                android:layout_marginTop="130dp"/>
+                android:layout_marginBottom="20dp"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -167,12 +169,10 @@
                 android:id="@+id/btnCheck"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="30dp"
+                android:layout_marginTop="10dp"
                 style="@style/CustomButtonStyle"
                 android:textStyle="bold"
                 android:text="@string/verificar" />
-        </LinearLayout>
-    </ScrollView>
 
     <ProgressBar
         android:id="@+id/loadingProgressBar"
@@ -192,5 +192,6 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true" />
-
+        </LinearLayout>
+    </ScrollView>
 </RelativeLayout>
