--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -8,27 +8,22 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <ImageButton
+        android:id="@+id/btnBack"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:background="@null"
+        android:contentDescription="backButton"
+        app:tint="?android:attr/iconTint"
+        android:src="@drawable/baseline_arrow_back_24"
+        android:scaleType="fitXY"
+        android:gravity="top"
+        android:layout_margin="15dp"/>
+
 <ScrollView
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true">
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:gravity="top">
-
-        <ImageButton
-            android:id="@+id/btnBack"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:background="@null"
-            app:tint="?android:attr/iconTint"
-            android:src="@drawable/baseline_arrow_back_24"
-            android:scaleType="fitXY"
-            android:gravity="top"
-            android:layout_margin="15dp"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -36,9 +31,8 @@
             android:orientation="vertical"
             android:layout_gravity="center"
             android:gravity="center"
-            android:layout_marginTop="20dp"
-            android:layout_marginStart="35dp"
-            android:layout_marginEnd="35dp">
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="15dp">
 
             <ImageView
                 android:layout_width="120dp"
@@ -98,7 +92,6 @@
                 android:text="CONTINUAR"
                 style="@style/CustomButtonStyle"
                 android:textStyle="bold"/>
-        </LinearLayout>
 
     </LinearLayout>
 
