--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -26,47 +26,47 @@
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/userPicture"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
         android:src="@drawable/default_image"
         android:layout_gravity="start"
         android:layout_marginBottom="10dp"/>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginBottom="2dp">
             <TextView
                 android:id="@+id/lblUserFullname"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 tools:text="Rafael Guerra"
                 android:textSize="15sp"
                 android:textColor="?android:attr/textColorPrimary"
                 android:textStyle="bold"
-                android:layout_marginEnd="5dp" />
+                android:ellipsize="end"
+                android:maxLines="1"/>
+
+        <TextView
+            android:id="@+id/lblUsername"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:text="\@rafaelguerra"
+            android:textColor="?android:attr/textColorSecondary"
+            android:textSize="13sp"
+            android:ellipsize="end"
+            android:maxLines="1"/>
 
             <TextView
-                android:id="@+id/lblUsername"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                tools:text="\@rafaelguerra"
-                android:textColor="?android:attr/textColorSecondary"
-                android:textSize="13sp" />
-        </LinearLayout>
-            <TextView
                 android:id="@+id/lblUserEmail"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                tools:text="rafael@ecosynergy.com"
+                tools:text="rafael@ecosynergybr.com"
                 android:textColor="?android:attr/textColorSecondary"
                 android:textSize="14sp" />
+
+
 
     </LinearLayout>
     <ImageButton
         android:id="@+id/btnLogout"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
         android:src="@drawable/baseline_logout_24"
         android:background="@null"
         android:scaleType="fitXY"
