--- a/app/src/main/res/layout/activity_teamoverview.xml
+++ b/app/src/main/res/layout/activity_teamoverview.xml
@@ -15,13 +15,13 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:gravity="top"
+    android:gravity="end"
     android:layout_gravity="top">
 
     <ImageButton
         android:id="@+id/btnClose"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:background="@null"
         android:contentDescription="BackButton"
         android:src="@drawable/baseline_close_24"
@@ -30,7 +30,7 @@
         android:gravity="top"
         android:layout_marginTop="15dp"
         android:layout_marginBottom="5dp"
-        android:layout_marginStart="15dp"/>
+        android:layout_marginEnd="15dp"/>
 
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tabLayout"
@@ -46,7 +46,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"/>
+            android:layout_marginEnd="20dp"
+            android:layout_marginTop="10dp"/>
 
     </LinearLayout>
 </ScrollView>
