--- a/app/src/main/res/layout/fragment_create_team_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_create_team_bottom_sheet.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -19,9 +18,9 @@
         android:gravity="end">
 
         <ImageButton
-            android:id="@+id/btnBack"
-            android:layout_width="39dp"
-            android:layout_height="40dp"
+            android:id="@+id/btnClose"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_marginEnd="15dp"
             android:layout_marginTop="30dp"
             android:layout_marginBottom="15dp"
