--- a/app/src/main/res/layout/fragment_team_members.xml
+++ b/app/src/main/res/layout/fragment_team_members.xml
@@ -6,6 +6,44 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:orientation="horizontal"
+        android:layout_gravity="center"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp">
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:hint="Pesquisar"
+        android:layout_gravity="center"
+        android:layout_marginBottom="3dp">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/txtMember"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:inputType="text"
+            android:enabled="true"
+            android:clickable="true"/>
+    </com.google.android.material.textfield.TextInputLayout>
+
+        <ImageButton
+            android:id="@+id/btnAddMember"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:background="@drawable/round_button"
+            android:src="@drawable/baseline_member_add"
+            app:tint="@color/white"
+            android:layout_marginStart="5dp"
+            android:visibility="visible"/>
+
+    </LinearLayout>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycleMembers"
         android:layout_width="match_parent"
