--- a/app/src/main/res/layout/activity_appsetings.xml
+++ b/app/src/main/res/layout/activity_appsetings.xml
@@ -1,36 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    <FrameLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".home.AppSettingsActivity"
-    android:orientation="vertical"
-    android:gravity="top">
+        android:gravity="top">
 
-    <ImageButton
-        android:id="@+id/btnBack"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:background="@null"
-        android:contentDescription="BackButton"
-        app:tint="?android:attr/iconTint"
-        android:src="@drawable/baseline_arrow_back_24"
-        android:scaleType="fitXY"
-        android:gravity="top"
-        android:layout_margin="15dp"/>
+        <ImageButton
+            android:id="@+id/btnBack"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:background="@null"
+            android:contentDescription="BackButton"
+            app:tint="?android:attr/iconTint"
+            android:src="@drawable/baseline_arrow_back_24"
+            android:scaleType="fitXY"
+            android:gravity="top"
+            android:layout_margin="15dp"/>
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="20dp">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:layout_marginTop="10dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="15dp">
 
+            <ImageView
+                android:id="@+id/imgAlert"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:src="@drawable/baseline_settings_24"
+                android:layout_marginBottom="20dp"
+                app:tint="?android:attr/iconTint"/>
 
-    </LinearLayout>
+            <TextView
+                android:id="@+id/txtAlert"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
+                android:textAlignment="center"
+                android:text="As configurações do aplicativo logo estarão disponíveis aqui para ser customizado."
+                android:layout_gravity="center"
+                android:textSize="16sp"
+                android:visibility="visible"/>
 
-</LinearLayout>
+        </LinearLayout>
+
+    </FrameLayout>
