--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,29 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".register.RegisterActivity"
-    android:focusable="false"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageButton
-        android:id="@+id/btnBack"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:background="@null"
-        android:contentDescription="backButton"
-        app:tint="?android:attr/iconTint"
-        android:src="@drawable/baseline_arrow_back_24"
-        android:scaleType="fitXY"
-        android:gravity="top"
-        android:layout_margin="15dp"/>
-
-<ScrollView
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fillViewport="true">
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fillViewport="true">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -93,7 +80,18 @@
                 style="@style/CustomButtonStyle"
                 android:textStyle="bold"/>
 
-    </LinearLayout>
+        </LinearLayout>
+    </ScrollView>
 
-</ScrollView>
-</RelativeLayout>
+    <ImageButton
+        android:id="@+id/btnBack"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:background="@null"
+        android:contentDescription="backButton"
+        app:tint="?android:attr/iconTint"
+        android:src="@drawable/baseline_arrow_back_24"
+        android:scaleType="fitXY"
+        android:layout_margin="15dp"
+        android:layout_gravity="top|start"/>
+</FrameLayout>
