--- a/app/src/main/res/layout/activity_register2.xml
+++ b/app/src/main/res/layout/activity_register2.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -8,21 +8,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageButton
-        android:id="@+id/btnBack"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:background="@null"
-        app:tint="?android:attr/iconTint"
-        android:src="@drawable/baseline_arrow_back_24"
-        android:scaleType="fitXY"
-        android:gravity="top"
-        android:layout_margin="15dp"/>
-
 <ScrollView
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fillViewport="true">
+    android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -101,7 +89,7 @@
                     android:id="@+id/spinnerGender"
                     android:layout_width="match_parent"
                     android:layout_height="60dp"
-                    android:spinnerMode="dropdown"
+                    android:spinnerMode="dialog"
                     android:background="@drawable/spinner_background"
                     android:layout_marginBottom="5dp"
                     />
@@ -126,5 +114,16 @@
                 style="@style/CustomButtonStyle"
                 android:textStyle="bold"/>
     </LinearLayout>
+
 </ScrollView>
-</RelativeLayout>
+    <ImageButton
+        android:id="@+id/btnBack"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:background="@null"
+        app:tint="?android:attr/iconTint"
+        android:src="@drawable/baseline_arrow_back_24"
+        android:scaleType="fitXY"
+        android:gravity="top"
+        android:layout_margin="15dp"/>
+</FrameLayout>
