--- a/app/src/main/res/layout/activity_terms.xml
+++ b/app/src/main/res/layout/activity_terms.xml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".home.TermsActivity"
-    android:orientation="vertical"
     android:gravity="top">
 
     <ImageButton
         android:id="@+id/btnBack"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:background="@null"
         android:contentDescription="BackButton"
         app:tint="?android:attr/iconTint"
@@ -22,15 +21,35 @@
         android:layout_margin="15dp"/>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_gravity="center"
         android:gravity="center"
         android:layout_marginTop="10dp"
-        android:layout_marginBottom="20dp">
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp">
 
+        <ImageView
+            android:id="@+id/imgAlert"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:src="@drawable/baseline_file_download_off_24"
+            android:layout_marginBottom="20dp"
+            app:tint="?android:attr/iconTint"/>
+
+        <TextView
+            android:id="@+id/txtAlert"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:textAlignment="center"
+            android:text="Os Termos de Uso e Privacidade da plataforma 'EcoSynergy' ainda não estão disponíveis na plataforma mobile."
+            android:layout_gravity="center"
+            android:textSize="16sp"
+            android:visibility="visible"/>
 
     </LinearLayout>
 
-</LinearLayout>
+</FrameLayout>
