--- a/app/src/main/res/layout/activity_usersettings.xml
+++ b/app/src/main/res/layout/activity_usersettings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<FrameLayout
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -7,31 +7,19 @@
     android:layout_height="match_parent"
     tools:context=".user.UserSettingsActivity">
 
-    <ImageButton
-        android:id="@+id/btnBack"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:background="@null"
-        android:contentDescription="BackButton"
-        android:src="@drawable/baseline_arrow_back_24"
-        android:scaleType="fitXY"
-        android:gravity="top"
-        android:layout_margin="15dp"
-        app:tint="?android:attr/iconTint" />
-
 <ScrollView
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:layout_marginStart="15dp"
-            android:layout_marginEnd="15dp">
-
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:layout_marginTop="25dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -64,19 +52,12 @@
             </com.facebook.shimmer.ShimmerFrameLayout>
             </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginBottom="20dp"
-                android:layout_gravity="center_vertical">
-
                 <com.google.android.material.textfield.TextInputLayout
-                    android:layout_width="0dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:hint="Nome de Usuário"
-                    android:layout_marginBottom="4dp">
+                    android:layout_marginBottom="15dp">
+
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/txtUsername"
                         android:layout_width="match_parent"
@@ -87,28 +68,12 @@
                         android:clickable="true"/>
                 </com.google.android.material.textfield.TextInputLayout>
 
-                <ImageButton
-                    android:id="@+id/btnEditUsername"
-                    android:layout_width="55dp"
-                    android:layout_height="55dp"
-                    android:layout_gravity="center"
-                    android:background="@drawable/round_button"
-                    android:src="@drawable/baseline_edit_24"
-                    app:tint="?android:attr/iconTint"
-                    android:layout_marginStart="5dp"/>
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginBottom="20dp"
-                android:layout_gravity="center_vertical">
 
                 <com.google.android.material.textfield.TextInputLayout
-                    android:layout_width="0dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:hint="Nome Completo">
+                    android:hint="Nome Completo"
+                    android:layout_marginBottom="15dp">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/txtFullname"
@@ -120,29 +85,11 @@
 
                 </com.google.android.material.textfield.TextInputLayout>
 
-                <ImageButton
-                    android:id="@+id/btnEditFullname"
-                    android:layout_width="55dp"
-                    android:layout_height="55dp"
-                    android:layout_gravity="center"
-                    android:background="@drawable/round_button"
-                    android:src="@drawable/baseline_edit_24"
-                    app:tint="?android:attr/iconTint"
-                    android:layout_marginStart="5dp"/>
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginBottom="20dp"
-                android:layout_gravity="center_vertical">
-
                 <com.google.android.material.textfield.TextInputLayout
-                    android:layout_width="0dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:hint="Email">
+                    android:hint="Email"
+                    android:layout_marginBottom="15dp">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/txtEmail"
@@ -154,60 +101,20 @@
 
                 </com.google.android.material.textfield.TextInputLayout>
 
-                <ImageButton
-                    android:id="@+id/btnEditEmail"
-                    android:layout_width="55dp"
-                    android:layout_height="55dp"
-                    android:layout_gravity="center"
-                    android:background="@drawable/round_button"
-                    android:src="@drawable/baseline_edit_24"
-                    app:tint="?android:attr/iconTint"
-                    android:layout_marginStart="5dp"/>
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:orientation="horizontal"
-                android:layout_marginBottom="20dp"
-                android:layout_gravity="center_vertical">
-
                 <Spinner
                     android:id="@+id/txtGender"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:spinnerMode="dropdown"
+                    android:layout_width="match_parent"
+                    android:layout_height="60dp"
+                    android:spinnerMode="dialog"
                     android:entries="@array/gender_arrayB"
                     android:background="@drawable/spinner_background"
-                    />
-
-
-                <ImageButton
-                    android:id="@+id/btnEditGender"
-                    android:layout_width="55dp"
-                    android:layout_height="55dp"
-                    android:layout_gravity="center"
-                    android:background="@drawable/round_button"
-                    android:src="@drawable/baseline_edit_24"
-                    app:tint="?android:attr/iconTint"
-                    android:layout_marginStart="5dp"/>
-            </LinearLayout>
-
-
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginBottom="10dp"
-                android:layout_gravity="center_vertical">
+                    android:layout_marginBottom="15dp"/>
 
                 <com.google.android.material.textfield.TextInputLayout
-                    android:layout_width="0dp"
+                    android:layout_width="match_parent"
                     android:layout_height="60dp"
-                    android:layout_weight="1"
-                    android:hint="Nacionalidade">
+                    android:hint="Nacionalidade"
+                    android:layout_marginBottom="15dp">
 
                     <com.google.android.material.textfield.MaterialAutoCompleteTextView
                         android:id="@+id/txtNationality"
@@ -217,20 +124,11 @@
                         android:text="carregando..."
                         android:enabled="false"
                         android:textSize="16sp"
-                        android:paddingStart="15dp"/>
+                        android:textColor="@color/disabled"
+                        android:paddingStart="15dp"
+                        />
 
                 </com.google.android.material.textfield.TextInputLayout>
-
-                <ImageButton
-                android:id="@+id/btnEditNationality"
-                android:layout_width="55dp"
-                android:layout_height="55dp"
-                android:layout_gravity="center"
-                android:background="@drawable/round_button"
-                android:src="@drawable/baseline_edit_24"
-                app:tint="?android:attr/iconTint"
-                android:layout_marginStart="5dp"/>
-            </LinearLayout>
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/btnPassword"
@@ -265,6 +163,53 @@
     </LinearLayout>
 
 </ScrollView>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_gravity="top">
+
+        <ImageButton
+            android:id="@+id/btnBack"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:background="@null"
+            android:contentDescription="BackButton"
+            android:src="@drawable/baseline_arrow_back_24"
+            android:scaleType="fitXY"
+            app:tint="?android:attr/iconTint"
+            android:layout_margin="15dp"
+            android:layout_gravity="center_vertical"
+            android:clickable="true"/>
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_gravity="center"
+            android:text="Informações do Usuário"
+            android:textAlignment="center"
+            android:textColor="?android:attr/textColorPrimary"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            />
+
+        <ImageButton
+            android:id="@+id/btnEdit"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:background="@null"
+            android:contentDescription="EditButton"
+            android:src="@drawable/baseline_edit_24"
+            android:scaleType="fitXY"
+            app:tint="?android:attr/iconTint"
+            android:layout_margin="15dp"
+            android:layout_gravity="center_vertical"
+            android:clickable="true"/>
+
+    </LinearLayout>
+
     <View
         android:id="@+id/overlayView"
         android:layout_width="match_parent"
@@ -278,4 +223,4 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:visibility="gone" />
-</RelativeLayout>
+</FrameLayout>
