--- a/app/src/main/res/layout/activity_reset.xml
+++ b/app/src/main/res/layout/activity_reset.xml
@@ -5,19 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".login.ResetActivity"
-    android:gravity="top">
-
-    <ImageButton
-        android:id="@+id/btnBack"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:background="@null"
-        app:tint="?android:attr/iconTint"
-        android:src="@drawable/baseline_arrow_back_24"
-        android:scaleType="fitXY"
-        android:gravity="top"
-        android:layout_margin="15dp"/>
+    tools:context=".login.ResetActivity">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -28,11 +16,28 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:layout_marginStart="15dp"
-        android:layout_marginEnd="15dp">
+        android:layout_gravity="start"
+        android:gravity="start">
 
+        <ImageButton
+            android:id="@+id/btnBack"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:background="@null"
+            app:tint="?android:attr/iconTint"
+            android:src="@drawable/baseline_arrow_back_24"
+            android:scaleType="fitXY"
+            android:gravity="top"
+            android:layout_margin="15dp"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="15dp">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -78,7 +83,6 @@
             android:textAlignment="center"/>
 
     </LinearLayout>
-
+    </LinearLayout>
     </ScrollView>
-
 </RelativeLayout>
